# wordle

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
doc/: plan.md  project.md
src/: app.py  board.py  constants.py  evaluator.py  keyboard.py  state_machine.py  styles.py  theme.py  tile.py  word_bank.py
tests/: test_smoke.py
tests/ui/: conftest.py  test_board.py  test_integration.py  test_keyboard.py  test_tile.py
tests/unit/: test_evaluator.py  test_state_machine.py  test_word_bank.py  test_word_bank_real.py
